RESOLVED FIXED42667
Assertion in Connection::sendOutgoingMessage when browser or web process is paused in the debugger
https://bugs.webkit.org/show_bug.cgi?id=42667
Summary Assertion in Connection::sendOutgoingMessage when browser or web process is p...
Adam Roben (:aroben)
Reported 2010-07-20 14:24:24 PDT
Assertion in Connection::sendOutgoingMessage when browser or web process is paused in the debugger
Attachments
Patch (1.51 KB, patch)
2010-07-20 14:26 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-07-20 14:26:51 PDT
Adam Roben (:aroben)
Comment 2 2010-07-20 15:00:26 PDT
Note You need to log in before you can comment on or make changes to this bug.